[project]
name = "ComfyUI_ZImageI2L_v2"
description = "Simple ComfyUI wrapper around DiffSynth-Studio's Z-Image i2L v2 (Image-to-LoRA)."
version = "1.1.1"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/jzhang-POP/ComfyUI_ZImageI2L_v2"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/jzhang-POP/ComfyUI_ZImageI2L_v2/wiki"
"Bug Tracker" = "https://github.com/jzhang-POP/ComfyUI_ZImageI2L_v2/issues"

[tool.comfy]
PublisherId = "jak"
DisplayName = "ComfyUI_ZImageI2L_v2"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

